--- a/lifetime_simulator/config_example.json
+++ b/lifetime_simulator/config_example.json
@@ -16,12 +16,12 @@
       "test-id": "other dummy test (executed only once)",
       "command": "echo \"executing other dummy command after installing app $APP_ID (version $APP_VERSION), released on: $RELEASE_DATE\"",
       "repeat": 1
+    },
+    {
+      "test-id": "send gmail",
+      "command": "python ../test_script/send_gmail.py",
+      "repeat": 1
     }
-	{
-	  "test-id": "send gmail",
-	  "command": "python ../test_script/send_gmail.py"
-	  "repeat": 1
-	}
   ]
 
 }
